feat: journal entry process
